--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,6 +9,16 @@ p {
   margin: 0;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
 body {
   color: $fc-dark;
   margin: 0;
